<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="deviceInfo">{\"DeviceID\":\"%1$s\",\"OsName\":\"ANDROID\",\"OsVersion\":\"%2$s\",\"AppName\":\"NCTVideo\",\"AppVersion\":\"%3$s\",\"UserId\":\"%4$s\",\"Provider\":\"NCTCorp\"}</string>    
    
    <string name="status_matketnoi">Disconect</string>
    <string name="status_chuacodulieu">No data</string>
    
    <string name="app_name">myCouper</string>
    <string name="splash_des">A mobile wallet \n for all your membership cards</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="empty"></string>
    <string name="account_test">hoang.test.001@gmail.com</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="scan">Scan</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="create_other_card">Create other card</string>

    <string name="change">Change</string>
    <string name="close">Close</string>
    <string name="card">Card</string>
    <string name="front_card">Front card</string>
    <string name="back_card">Back card</string>
    <string name="map">Map</string>
    <string name="rotate">Rotate</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="skip">Skip</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_delete">Do you want to delete this card?</string>

    <string name="coupons">COUPONS:</string>
    <string name="expire_at">Expire at:</string>
    <string name="open_">Open:</string>
    <string name="close_">Close:</string>
    <string name="select_country">Select Country</string>

    <string name="available_outlets">Available stores</string>
    <string name="stores_map">Stores map</string>

    <string name="recieve_coupon">Receive Coupon</string>
    <string name="validity">Validity</string>
    <string name="term_and_condition">Term and Condition</string>
    <string name="stores">Stores</string>
    <string name="qrcode_on_mobile">QRCode on mobile</string>
    <string name="coupon_is_saved">Coupon is saved</string>
    <string name="serials_number">Serial number</string>
    <string name="valid_from">Valid from</string>
    <string name="valid_to">Valid to</string>
    <string name="do_you_want_delete_this_coupon">Do you want delete this coupon ?</string>

    <string name="language">Language</string>
    <string name="tutorials">Tutorials</string>
    <string name="ask">Ask</string>
    <string name="infomation">Infomation</string>
    <string name="contact">Contact</string>
    <string name="contact_us">Please contact to us if you would like to collaborate</string>

    <string name="contact_email_info">sale@mycouper.com</string>
    <string name="contact_phone_info">+84902292626</string>

    <string name="version_user">Version :</string>
    <string name="introduce">Introduce</string>
    <string name="term_of_use">Term of use</string>
    <string name="login_to_use_tools">Login to use mobile tool for stores</string>

    <string name="select_store">Select store</string>
    <string name="select_stamp_card">Select stamp card</string>
    <!-- CARD DETAIL -->
    <string name="card_detail_enter_the_following">Enter the following code if the devices does not recognize:</string>


    <!-- CHANGE PASS -->
    <string name="change_pass">CHANGE PASSWORD</string>
    <string name="change_pass_currentpass">Current passowrd</string>
    <string name="change_pass_newpass">New password</string>
    <string name="change_pass_confirm_pass_not_match">Confirm password does not match!</string>
    <string name="change_pass_enter_new_password">Enter new password</string>
    <string name="change_pass_your_pass_have_been_update">Your password have been updated</string>

    <string name="retake">Retake</string>
    <string name="use">Use</string>
    <string name="gallery">Gallery</string>




    <!-- USER PROFILE -->
    <string name="user_profile">Account</string>
    <string name="user_account_normal">ACCOUNT</string>
    <string name="user_account">ACCOUNT</string>
    <string name="user_account_firstname">First name:</string>
    <string name="user_account_lastname">Last name:</string>
    <string name="user_account_birthday">Birthday:</string>
    <string name="user_account_civility">Civility:</string>
    <string name="user_account_phone">Phone:</string>
    <string name="user_account_lastlogin">Last login:</string>
    <string name="user_account_login_click_to_edit">Account Login \n Click to edit information</string>
    <string name="user_account_sharing_mycouper">Sharing myCouper with your firends:</string>
    <string name="user_account_logout">Logout</string>
    <string name="user_account_password_click_here">Password (click here to change)</string>
    <string name="user_account_update_success">User\'s profile have been updated!</string>
    <string name="user_account_update_failed">User\'s profile haven\'t been updated!</string>
    <string name="user_account_format_birthday">yyyy-mm-dd</string>
	<string name="user_account_dateofbirthday">Date of birthday:</string>
    <string name="user_infomation">User infomation</string>
    <string name="user_dialog_title">Please complete the below form to register this card</string>

    <!-- FRAG CREATE NEW CARD -->
    <string name="frag_createcard">CREATE NEW CARD</string>
    <string name="frag_createcard_other">Other (not in list)</string>
    <string name="frag_createcard_findinlist">Find in list (Viet Nam)</string>
    <string name="frag_createcard_store">Store:</string>
    <string name="frag_createcard_company_name">Company name:</string>
    <string name="frag_createcard_cardinformation">Card information:</string>

    <!-- FRAG CREATE CARD INFO -->
    <string name="frag_createcard_info_title">Or enter below information</string>
    <string name="frag_createcard_info_cardcode">Card code:</string>
    <string name="frag_createcard_info_required">(required)</string>
    <string name="frag_createcard_info_typecode">Code type:</string>
        <string name="frag_createcard_info_cardname">Name on Card:</string>
    <string name="frag_createcard_info_optional">(optional)</string>
    <string name="frag_createcard_info_description">Description:</string>
    <string name="frag_createcard_info_caompanyname">Company name:</string>
    <string name="frag_createcard_info_caompanyname_is_empty">Shop name is required!</string>
    <string name="frag_createcard_info_cardcode_is_empty">Card code is required!</string>
    <string name="frag_createcard_info_cardname_requiret">Card name is required!</string>
    <string name="frag_createcard_info_front_camera">Front face</string>
    <string name="frag_createcard_info_back_camera">Back face</string>
    <string name="frag_createcard_info_capture_front">Front photo is required!</string>
    <string name="frag_createcard_info_capture_back">Back photo is required!</string>
    <string name="frag_createcard_info_upload_front">Upload front photo error!</string>
    <string name="frag_createcard_info_upload_back">Upload back photo error!</string>
    <string name="frag_createcard_info_successfully">CREATE CARD SUCCESSFULLY!</string>
    <string name="frag_createcard_info_failed">CREATE CARD FAILED!</string>
    <string name="frag_updatecard_info_successfully">UPDATE CARD SUCCESSFULLY!</string>
    <string name="frag_updatecard_info_failed">UPDATE CARD FAILED!</string>

    <!-- FRAG MEMBER CARD -->
    <string name="frag_membercard_addmore">+   Add more card</string>
    <string name="frag_membercard">MEMBER CARD</string>

    <!-- SIGN UP -->
    <string name="signup_couper_will_help">( Couper will help you keep all the cards when switching phone )</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirmpass">Confirm password</string>
    <string name="signup_required">(required)</string>
    <string name="signup_success">Signup successfully!</string>
    <string name="signup_failed">Signup failed!</string>

    <!-- FORGOT PASSWORD -->
    <string name="forgot_email_dot">Email :</string>
    <string name="forgot_email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_please_enter_your">( Please enter your registered email !)</string>
    <string name="forgot_resend_pass">Resend password</string>
    <string name="forgot_already_have">Already have an account</string>
    <string name="forgot_login">Login</string>


    <!-- LOGIN -->
    <string name="login_login">Log in</string>
    <string name="login_login_with_facebook">Log in with Facebook</string>
    <string name="login_copywright">Copywright @2015 by myCouper</string>
    <string name="login_forgot_pass">Forgot password</string>
    <string name="login_signup">Sign up</string>
    <string name="login_message_user_is_empty">Field username is not empty!</string>
    <string name="login_message_pass_is_empty">Need password field!</string>
    <string name="login_message_user_invalid">Email is invalid!</string>
    <string name="login_message_confirm_pass_incorrect">Confirm password incorrect!</string>

    <string name="do_you_want_logout">Do you want to log out?</string>
    <string name="logout_success">Logout success!</string>


    <!-- ITEM COPYWRIGHT -->
    <string name="item_copywright">Copyright 2015 by myCouper</string>

    <!-- Camera-->
    <string name="camera_take_photo">Take a photo</string>
    <string name="camera_flast_auto">Auto</string>
    <string name="camera_flast_on">On</string>
    <string name="camera_flast_off">Off</string>

    <!-- ITEM ICON MYCOUPER -->
    <string name="item_icon_mycouper_dot">-------------------------------------</string>


    <!-- Font name -->
    <string name="font_roboto_bold">Roboto-Bold</string>
    <string name="font_roboto_bold_italic">Roboto-BoldItalic</string>
    <string name="font_roboto_italic">Roboto-Italic</string>
    <string name="font_roboto_light">Roboto-Light</string>
    <string name="font_roboto_light_italic">Roboto-LightItalic</string>
    <string name="font_roboto_medium">Roboto-Medium</string>
    <string name="font_roboto_medium_italic">Roboto-MediumItalic</string>
    <string name="font_roboto_regular">Roboto-Regular</string>
    <string name="font_georgia_bold_italic">GeorgiaBoldItalic</string>
    <string name="font_raleway_bold">Raleway-Bold</string>

    <!-- camera 24 -->
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="auto">Auto</string>
    <string name="library">Library</string>
    <string name="instagram">Instagram</string>

    <!-- Store -->
    <string name="stores_account">Account :</string>
    <string name="stores_password">Password :</string>
    <string name="stores_qrcode_title">QRCode on mobile</string>
    <string name="stores_qrcode_coupon">Coupon</string>
    <string name="stores_qrcode_cards">Card:</string>
    <string name="stores_qrcode_loyalty_cards">Stamp card</string>
    <string name="stores_qrcode_name">Coupon:</string>
    <string name="stores_qrcode_store">Store:</string>
    <string name="stores_qrcode_date">Qrcode date:</string>
    <string name="stores_qrcode_create">Gen new Qrcode</string>
    <string name="stores_qrcode_save_gallery">Save to gallery</string>


    <string name="stores_message_save_gallery_success">Save to gallery successfully!</string>
    <string name="stores_message_save_gallery_failed">Save to gallery failed!</string>

    <string name="stores_message_gen_qrcode">When generating new QRcode, all of current one will be invalided.\n Are you sure want to generate?</string>

    <string name="stores_no_account">No account? Please visit </string>
    <string name="stores_to_register">to register </string>


</resources>
