<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/splash_icon_mycouper_marintop"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/item_icon_mycouper_size"
        android:layout_height="@dimen/item_icon_mycouper_size"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/icon_logo"
        android:contentDescription="@string/empty" />

    <com.nct.customview.TfTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/item_icon_mycouper_textsize"
        app:typeface_name="@string/font_roboto_regular"
        app:typeface_style="bold" />

    <com.nct.customview.TfTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lines="1"
        android:text="@string/item_icon_mycouper_dot"
        android:textColor="@color/white"
        app:typeface_name="@string/font_roboto_regular" />

</LinearLayout>