<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/item_top_bar"></include>

    <com.nct.customview.TfTextView android:layout_marginTop="@dimen/change_pass_title_marin_top"
        android:text="@string/change_pass_currentpass"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textColor="@color/black" android:textSize="16sp"
        app:typeface_name="@string/font_roboto_regular" app:typeface_style="bold"/>

    <com.nct.customview.TfTextView android:layout_marginTop="@dimen/change_pass_title_marin_top"
        android:text="@string/change_pass_newpass"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textColor="@color/black" android:textSize="16sp"
        app:typeface_name="@string/font_roboto_regular" app:typeface_style="bold"/>


</LinearLayout>