<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_topbar_h"
    android:background="@color/blue_topbar"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/item_topbar_icon_marin"
    android:paddingRight="@dimen/item_topbar_icon_marin">

    <ImageView
        android:id="@+id/item_topbar_bt_leftmenu"
        android:layout_width="@dimen/item_topbar_icon_size"
        android:layout_height="@dimen/item_topbar_icon_size"
        android:contentDescription="@string/empty"
        android:src="@drawable/icon_logo_small" />

    <com.nct.customview.TfTextView
        android:id="@+id/item_topbar_tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:lines="1"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/item_topbar_text_size"
        app:typeface_name="@string/font_roboto_regular"
        app:typeface_style="bold" />

    <ImageView
        android:id="@+id/item_topbar_bt_rightmenu"
        android:layout_width="@dimen/item_topbar_icon_size"
        android:layout_height="@dimen/item_topbar_icon_size"
        android:contentDescription="@string/empty"
        android:src="@drawable/icon_menu" />

    <com.nct.customview.TfTextView
        android:id="@+id/item_topbar_tv_right"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="@dimen/item_topbar_text_size"
        app:typeface_name="@string/font_roboto_regular" />

</LinearLayout>