<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">

	<LinearLayout android:id="@+id/view_disconnect"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center" android:gravity="center"
		android:orientation="vertical" android:visibility="gone">

		<ImageView android:id="@+id/view_disconnect_img" android:contentDescription="@string/app_name"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center" android:src="@drawable/ic_blank_networkproblem" />

		<TextView android:id="@+id/view_disconnect_tv"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center" android:layout_marginTop="10dp"
			android:text="@string/status_matketnoi" />
	</LinearLayout>

	<ProgressBar android:id="@+id/view_progress"
		style="?android:attr/progressBarStyleLarge" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center"
		android:gravity="center" android:indeterminate="true"
		android:indeterminateDrawable="@drawable/progressbar_drawable" />

	<TextView android:id="@+id/view_empty" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center"
		android:text="@string/status_chuacodulieu" android:visibility="gone" />

</FrameLayout>